--- a/style.css
+++ b/style.css
@@ -46,3 +46,10 @@
   border-radius: 10px;
   text-align: center;
 }
+
+.nav{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
